# ASMSA

./: .gitignore  .gitmodules  .resources  01-setup.ipynb  02-prepare.ipynb  03-tune.ipynb  04-train.ipynb  05-plumed.ipynb  06-md.ipynb  ASMSAnalysis.ipynb  ASMSAnalysis.py  Dockerfile  Dockerfile-conda  Dockerfile-pip  Dockerfile.amd  IMAGE  Makefile  README-hub.md  README.md  all-final-energies.sh  asmsa.ipynb  batched-discriminator.ipynb  class_train.ipynb  environment.yml  final-energies.sh  gmx-wrap2.sh  intcoord.ipynb  latent_analysis.ipynb  md.ipynb  md1_2fitskip20.xtc  monitor.sh  multimodel2.ipynb  pkgtest.ipynb  plumed.ipynb  postBuild  prepare.ipynb  reconstruct-beranek.ipynb  reconstruct.ipynb  requirements.txt  run-min.sh  (+11 more)
binder/: environment.yml
jupyterhub/: jupyterhub.yaml
miscellaneous/: Dockerfile.amd  IMAGE  Makefile.old  gmx-wrap3.py
miscellaneus/: 3142.patch  asmsa_callbacks.py  download-trpcage.py  gmx-wrap3.py  krb5.conf  requirements.txt  start.sh  start_in_venv.sh  tuning.sh  tuning_master.sh  tuning_slave.sh
notebooks/: batched-discriminator.ipynb  intcoord.ipynb  multimodel.ipynb  plumed.ipynb  prepare.ipynb  reconstruct-beranek.ipynb  reconstruct.ipynb  train.ipynb  tuning_sklearn.ipynb  vae.ipynb
package/: setup.cfg
package/asmsa/: __init__.py  aae_hyper_model.py  aae_model.py  gmx.py  helpers.py  mol_model.py  molecule.py
package/asmsa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
package/asmsa/asmsa/: tuning_analyzer.py
prepare_data/: backbone.ndx  p53_wt.gro  p53_wt.ndx  posre.itp  rmsd.xvg  testxvalidate_rmsd.xpm
(+53 files in other folders)
