[metadata]
name = asmsa
version = 2.0.0
author = Ales Krenek
author_email = ljocha@ics.muni.cz
description = Analysis and Sampling of Molecular Simulations by adversarial Autoencoders
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.ics.muni.cz/3086/ASMSA
project_urls =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
  = .
packages = find:
python_requires = >=3.6
scripts = 
install_requires =
    mdtraj
include_package_data = True

[options.packages.find]
where = .

[options.package_data]
asmsa = *.itp
